<resources>
    <string name="app_name">ShowCoins</string>
    <string name="list_coins">List Coins</string>
    <string name="list_favourites_coins_fragment">Favourites</string>
    <string name="sorting_by_az">Sorting by A-Z</string>
    <string name="sorting_by_za">Sorting by Z-A</string>
    <string name="sorting_by_high_value">Sorting by high value</string>
    <string name="sorting_by_low_value">Sorting by low value</string>
    <string name="sorting_by">Sorting by</string>
    <string name="item_coin">%s : %s$</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>